--- a/src/assets/updateData.css
+++ b/src/assets/updateData.css
@@ -1,5 +1,5 @@
 body{
-    background-color: gray;
+    background-color: rgb(37, 37, 38);
 }
 #conteiner{
     width: 100%;
@@ -50,5 +50,4 @@ body{
     margin-left: 15%;
     top: 14%;
     width: 70%;
-
 }
